# internal/dtos/user_dto.go
@@ -10,7 +10,7 @@ type UserProfile struct {
 	Email    string      `json:"email"`
 	Birthday *types.Date `json:"birthday"`
 
-	CurrentTeam *TeamSummary       `json:"current_team,omitempty"`
+	CurrentTeam *PositionSummary   `json:"current_team,omitempty"`
 	Position    Position           `json:"position"`
 	Projects    []ProjectSummary   `json:"projects"`
 	Skills      []UserSkillSummary `json:"skills"`
@@ -31,4 +31,19 @@ type UserDataForSearch struct {
 	ID    uint   `json:"id"`
 	Name  string `json:"name"`
 	Email string `json:"email"`
+}
+
+type UpdateUserRequest struct {
+	Name       string            `json:"name" binding:"required"`
+	Email      string            `json:"email" binding:"required,email"`
+	Birthday   *types.Date       `json:"birthday"`
+	PositionID uint              `json:"position_id" binding:"required"`
+	TeamID     *uint             `json:"team_id"`
+	Skills     []UpdateUserSkill `json:"skills"`
+}
+
+type UpdateUserSkill struct {
+	ID             uint `json:"id" binding:"required"`
+	Level          int  `json:"level" binding:"required,min=1,max=10"`
+	UsedYearNumber int  `json:"used_year_number" binding:"min=0,max=100"`
 }
